# telegram-bot

./: .gitignore  PestehAdviskerman20230703.geojson  PestehAdviskerman20230704.geojson  PestehAdviskerman20230705.geojson  README.md  TODO.md  bot_data.pickle  data_utils.py  database.py  docker-compose.yml  dockerfile  ftp_utils.py  keyboards.py  main.py  manual_location.json  pyproject.toml  regular_jobs.py  requirements.txt  table_generator.py  tutorial.py  vilages.xlsx
.github/workflows/: CI.yml
src/: database.py  main.py
src/utils/: add_conv.py  admin.py  automn_conv.py  commands.py  delete_conv.py  edit_conv.py  harvest_conv.py  keyboards.py  logger.py  payment_funcs.py  process_dialogs.py  register_conv.py  regular_jobs.py  set_location_conv.py  sms_funcs.py  view_conv.py  weather_conv.py
