[tool.poetry]
name = "base-bot"
version = "0.1.0"
description = "a telegram bot that offers advice to farmers based on meteorology data"
authors = ["Amir Reza Rezvanian <arrezvaniyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
python-telegram-bot = {extras = ["all"], version = "13.7"}
pydantic = "^1.10.6"
motor = "^3.1.1"
geopandas = "0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-env = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"