[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "A telegram bot offering data driven insights to farmers"
authors = ["Amirr95 <arrezvaniyan@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "13.7.0", extras = ["all"]}
geopandas = "^0.13.2"
pysocks = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
