[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "A telegram bot offering data driven insights to farmers"
authors = ["Amirr95 <arrezvaniyan@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^20.4"}
geopandas = "^0.13.2"
pysocks = "^1.7.1"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
pymongo = "^4.4.0"
geopy = "^2.3.0"
jdatetime = "^4.1.1"
dnspython = "^2.3.0"
imgkit = "^1.2.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
